--- a/src/components/Links/Links.scss
+++ b/src/components/Links/Links.scss
@@ -3,7 +3,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   height: 25rem;
-  background-attachment: fixed;
+  // background-attachment: fixed;
   transition: all 0.9s ease;
   background-image: url("/images/tech.png");
 }
